--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "@types/reactstrap": "^8.7.2",
     "bootstrap": "^5.3.0",
     "firebase": "^9.22.1",
     "lodash": "^4.17.21",
@@ -21,6 +22,7 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.10",
     "typescript": "^4.9.5",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
