--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.0",
     "firebase": "^9.22.1",
     "lodash": "^4.17.21",
+    "material-react-table": "^1.12.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
