--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/d3": "^7.4.0",
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.14.195",
     "@types/node": "^16.18.34",
@@ -13,6 +14,7 @@
     "@types/react-dom": "^18.2.4",
     "@types/reactstrap": "^8.7.2",
     "bootstrap": "^5.3.0",
+    "d3": "^7.8.5",
     "firebase": "^9.22.1",
     "lodash": "^4.17.21",
     "material-react-table": "^1.12.0",
